--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,92 @@
-opencv-python
-mediapipe
-numpy
-flask
-flask_restful
+absl-py==1.2.0
+aiohttp==3.8.3
+aiosignal==1.2.0
+aniso8601==9.0.1
+astunparse==1.6.3
+async-timeout==4.0.2
+attrs==22.1.0
+backcall==0.2.0
+cachetools==5.2.0
+cbor2==5.4.3
+certifi==2022.9.24
+charset-normalizer==2.1.1
+click==8.1.3
+colorama==0.4.6
+contourpy==1.0.5
+cycler==0.11.0
+executing==1.2.0
+Flask==2.2.2
+Flask-RESTful==0.3.9
+flatbuffers==22.9.24
+fonttools==4.37.3
+frozenlist==1.3.1
+gast==0.4.0
+google-auth==2.13.0
+google-auth-oauthlib==0.4.6
+google-pasta==0.2.0
+grpcio==1.50.0
+h5py==3.7.0
+idna==3.4
+imutils==0.5.4
+itsdangerous==2.1.2
+Jinja2==3.1.2
+joblib==1.2.0
+keras==2.10.0
+Keras-Preprocessing==1.1.2
+kiwisolver==1.4.4
+libclang==14.0.6
+Markdown==3.4.1
+MarkupSafe==2.1.1
+matplotlib==3.6.0
+mediapipe==0.8.11
+MouseInfo==0.1.3
+multidict==6.0.2
+numpy==1.23.3
+oauthlib==3.2.2
+opencv-contrib-python==4.6.0.66
+opencv-python==4.6.0.66
+opt-einsum==3.3.0
+packaging==21.3
+pickleshare==0.7.5
+Pillow==9.2.0
+protobuf==3.19.6
+pubnub==7.0.1
+pure-eval==0.2.2
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+PyAutoGUI==0.9.53
+pycryptodomex==3.15.0
+PyGetWindow==0.0.9
+PyMsgBox==1.0.9
+pyparsing==3.0.9
+pyperclip==1.8.2
+PyRect==0.2.0
+PyScreeze==0.1.28
+python-dateutil==2.8.2
+pytweening==1.0.4
+pytz==2022.5
+pywin32==304
+requests==2.28.1
+requests-oauthlib==1.3.1
+rsa==4.9
+scikit-learn==1.1.2
+scipy==1.9.3
+six==1.16.0
+sklearn==0.0
+tensorboard==2.10.1
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
+tensorflow==2.10.0
+tensorflow-estimator==2.10.0
+tensorflow-io-gcs-filesystem==0.27.0
+termcolor==2.0.1
+threadpoolctl==3.1.0
+timer==0.2.2
+tornado==6.2
+traitlets==5.5.0
+typing_extensions==4.4.0
+urllib3==1.26.12
+wcwidth==0.2.5
+Werkzeug==2.2.2
+wrapt==1.14.1
+yarl==1.8.1
