--- a/app/package.json
+++ b/app/package.json
@@ -22,7 +22,10 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "rules": {
+       "react/react-in-jsx-scope": "off"
+      }
   },
   "browserslist": {
     "production": [
