--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,30 @@
+absl-py==1.4.0
+aniso8601==9.0.1
+attrs==22.2.0
+click==8.1.3
+colorama==0.4.6
+contourpy==1.0.7
+cycler==0.11.0
+dnspython==2.3.0
 Flask==2.2.2
 Flask-RESTful==0.3.9
-matplotlib==3.6.0
-mediapipe==0.8.11
-numpy==1.23.3
-opencv-contrib-python==4.6.0.66
-opencv-python==4.6.0.66
+flatbuffers==23.1.4
+fonttools==4.38.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+kiwisolver==1.4.4
+MarkupSafe==2.1.1
+matplotlib==3.6.3
+mediapipe==0.9.0.1
+numpy==1.24.1
+opencv-contrib-python==4.7.0.68
+opencv-python==4.7.0.68
+packaging==23.0
+Pillow==9.4.0
+protobuf==3.20.3
+pymongo==4.3.3
+pyparsing==3.0.9
+python-dateutil==2.8.2
+pytz==2022.7.1
+six==1.16.0
+Werkzeug==2.2.2
