--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,12 @@
 absl-py==1.4.0
+aiohttp==3.8.3
+aiosignal==1.3.1
 aniso8601==9.0.1
+async-timeout==4.0.2
 attrs==22.2.0
+cbor2==5.4.6
+certifi==2022.12.7
+charset-normalizer==2.1.1
 click==8.1.3
 colorama==0.4.6
 contourpy==1.0.7
@@ -10,21 +16,29 @@ Flask==2.2.2
 Flask-RESTful==0.3.9
 flatbuffers==23.1.4
 fonttools==4.38.0
+frozenlist==1.3.3
+idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
 kiwisolver==1.4.4
 MarkupSafe==2.1.1
 matplotlib==3.6.3
 mediapipe==0.9.0.1
+multidict==6.0.4
 numpy==1.24.1
 opencv-contrib-python==4.7.0.68
 opencv-python==4.7.0.68
 packaging==23.0
 Pillow==9.4.0
 protobuf==3.20.3
+pubnub==7.1.0
+pycryptodomex==3.17
 pymongo==4.3.3
 pyparsing==3.0.9
 python-dateutil==2.8.2
 pytz==2022.7.1
+requests==2.28.2
 six==1.16.0
+urllib3==1.26.14
 Werkzeug==2.2.2
+yarl==1.8.2
