--- a/app/package.json
+++ b/app/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "react-slideshow-image": "^4.2.0",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
