--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,7 @@
     "pubnub": "^7.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-recaptcha": "^2.1.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "react-slideshow-image": "^4.2.0",
