--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "gapi-script": "^1.2.0",
     "ioredis": "^5.3.1",
     "jsonwebtoken": "^9.0.0",
     "npm": "^9.6.2",
+    "react-google-login": "^5.2.2",
     "validator": "^13.9.0"
   }
 }
