--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "axios": "^1.3.6",
+    "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "gapi-script": "^1.2.0",
     "ioredis": "^5.3.1",
