--- a/api/package.json
+++ b/api/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@mui/material": "^5.11.3",
     "@mui/styled-engine-sc": "^5.11.0",
+    "bcrpyt": "^2.0.0",
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "crypto-js": "^4.1.1",
